--- a/HealthyTrailer/GoogleService-Info.plist
+++ b/HealthyTrailer/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>6895580876-4crt1b1aighlvg5bl9lfijflqk0dcgna.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.6895580876-4crt1b1aighlvg5bl9lfijflqk0dcgna</string>
 	<key>API_KEY</key>
 	<string>AIzaSyCLXOUK0qL1nghGTLNlNlbCgEYWJjRfjE8</string>
 	<key>GCM_SENDER_ID</key>
