--- a/HealthyTrailer/Info.plist
+++ b/HealthyTrailer/Info.plist
@@ -2,8 +2,21 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>ITSAppUsesNonExemptEncryption</key>
-	<false/>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>Google Sign in</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.6895580876-4crt1b1aighlvg5bl9lfijflqk0dcgna</string>
+			</array>
+		</dict>
+	</array>
+	<key>GIDClientID</key>
+	<string>6895580876-4crt1b1aighlvg5bl9lfijflqk0dcgna.apps.googleusercontent.com</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Roboto-Black.ttf</string>
