add: background fetch logic integration

--- a/HealthyTrailer/Info.plist
+++ b/HealthyTrailer/Info.plist
@@ -26,5 +26,17 @@
 		<string>Roboto-Regular.ttf</string>
 		<string>Roboto-Thin.ttf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>bluetooth-peripheral</string>
+		<string>fetch</string>
+		<string>processing</string>
+		<string>remote-notification</string>
+		<string>bluetooth-central</string>
+	</array>
+    <key>BGTaskSchedulerPermittedIdentifiers</key>
+    <array>
+        <string>com.GunGaX.HealthyTrailer.refresh</string>
+    </array>
 </dict>
 </plist>
